# lapin_garda_test

./: CMakeLists.txt  Client.cpp  Dockerfile  README.md  Server.cpp  suffer.cpp
.devcontainer/: devcontainer.json
include/: calculator.h  check_correct.h  eval.h
